# pyramid_rest

./: .coveragerc  .gitignore  .hgignore  .travis.yml  CHANGES.rst  README.rst  dev-requirements.txt  requirements-dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  index.rst
example/: __init__.py
example/model/: __init__.py  application.py  message.py  user.py
example/views/: __init__.py  application_media.py  application_user_messages.py  application_user_score.py  application_users.py  applications.py  declarative.py  health.py  messages.py
pyramid_rest/: __init__.py  mongo.py  renderer.py  resource.py  sphinxext.py
pyramid_rest/tests/: __init__.py
pyramid_rest/tests/functional/: __init__.py  example.py  test_mongo.py  test_renderer.py  test_resource.py
pyramid_rest/tests/unittests/: test_mongo.py  test_pyramid_rest.py  test_renderer.py  test_resource.py  test_route_pattern_ids.py
