[metadata]
name = pyramid_rest
version = 0.0.1
summary = Pyramid Rest Extension
requires-dist =
    pyramid
    sphinx


[files]
packages =
    pyramid_rest
extra_files =


[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_rest
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
