[metadata]
name = pyramid_rest
version = 0.1.0
summary = Pyramid Rest Extension
requires-dist =
    pyramid
    pyramid_debugtoolbar
    sphinx
description-file = README.rst
author = Hadrien David
author_email = hadrien@ectobal.com

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[files]
packages =
    example
    example.model
    example.views
    pyramid_rest
    pyramid_rest.tests
    pyramid_rest.tests.functional
    pyramid_rest.tests.unittests

extra_files =
    setup.py

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_rest
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
